src/components/widgets/background/scss/index.scss
@import 'photoinformation';
@import 'scss/mixins';

#backgroundImage {
  height: 100vh;
  background-size: cover !important;
  background-repeat: no-repeat !important;
  background-position: center !important;
  background-attachment: fixed !important;
  zoom: 100% !important;
}

.backgroundTransform {
  @include animation('fadein2 2s');
  transition: background  2s;
}

@include keyframes(fadein2) {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

.backgroundPreload {
  opacity: 0;
}

#backgroundVideo {
  position: fixed;
  right: 0;
  bottom: 0;
  min-width: 100%;
  min-height: 100%;
}

.fade-in {
  @include animation('fadein 1s');
}

@include keyframes(fadein) {
  from {
    opacity: 0;
  }

  to {
    opacity: 1;
  }
}

